--- a/webpack5Book/doc/6.使用webpack搭建react环境.md
+++ b/webpack5Book/doc/6.使用webpack搭建react环境.md
@@ -30,7 +30,7 @@ module.exports = {
 3. 添加并下载react-dom,用于渲染react组件
 
 ```js
-// index.js
+// index.css.js
 import React from 'react';
 import ReactDOM from 'react-dom';
 
